@@ -234,3 +234,5 @@ added a little profiling information to the loader, telling the number of millis
 parity.inspector has been improved, and now defaults to a more ldd like interface.
 
 parity.inspector now knows about native libraries, not linked with parity.
+
+parity.loader has a much improved loading failure output, which allows for much easier isolation of the real loading problem for shared libraries.
